@@ -6,7 +6,10 @@ runs:
 
   steps:
     - run: |
-        if [[ "${{ github.ref_name }}" != "master" ]]; then
-          echo "SYNERGY_VERSION=${{ github.event.inputs.version || github.ref_name }}" >> $GITHUB_ENV
+        if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+          echo "SYNERGY_VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+        fi
+        if [[ "${{ github.event.inputs.version }}" != "" ]]; then
+          echo "SYNERGY_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
         fi
       shell: bash
